--- a/CrossingRoad/CrossingRoad.vcxproj
+++ b/CrossingRoad/CrossingRoad.vcxproj
@@ -149,6 +149,7 @@
     <ClCompile Include="GCar.cpp" />
     <ClCompile Include="GPeople.cpp" />
     <ClCompile Include="Graphics.cpp" />
+    <ClCompile Include="Map.cpp" />
     <ClCompile Include="Menu.cpp" />
     <ClCompile Include="GTruck.cpp" />
     <ClCompile Include="Source.cpp" />
@@ -165,8 +166,10 @@
     <ClInclude Include="GCar.h" />
     <ClInclude Include="GPeople.h" />
     <ClInclude Include="Graphics.h" />
+    <ClInclude Include="Map.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="GTruck.h" />
+    <ClInclude Include="TrafficLight.h" />
     <ClInclude Include="Vehicle.h" />
     <ClInclude Include="_Game.h" />
   </ItemGroup>
